--- a/astray.html
+++ b/astray.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
- <meta charset="UTF-8">
-  <title>JS Drum Kit</title>
-  <link rel="stylesheet" href="astray.css">
-  <link rel="icon" href="https://fav.farm/🔥" />
+ <head>
+        <meta charset="UTF-8">
+        <title>JS Drum Kit</title>
+        <link rel="stylesheet" href="astray.css">
+        <link rel="icon" href="https://fav.farm/🔥" />
  </head>
 
  <body>
@@ -52,7 +52,7 @@
 
             <div data-key="75" class="key">
                 <kbd>L</kbd>
-                <span class="Sound">tink</span>
+                <span class="Sound">tom</span>
             </div>
         </div>
 
@@ -121,6 +121,37 @@
                 color: #ffc600;
             }
 
+
         </style>
+
+        <script>
+
+function playSound(e) {
+  const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+  const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
+
+  if (!audio) return; // stop the function from running altogether
+
+  audio.currentTime = 0; // rewind to the start
+
+  audio.play();
+  key.classList.add("playing");
+}
+
+function removeTransition(e) {
+  if (e.propertyName !== "transform") return;
+  this.classList.remove("playing");
+}
+
+const keys = document.querySelectorAll(".key");
+
+keys.forEach((key) => key.addEventListener("transitionend", removeTransition));
+
+window.addEventListener("keydown", playSound);
+
+
+        </script>
  </body>
 </html>
+
+<script type="text/javascript" src="help.js"></script>
